# Reverse-Word-Pairs

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs
cmake/: config.cmake
data/: TheReverseWordTest.txt
rust_attempts/: Cargo.toml
rust_attempts/src/: attempt1.rs  attempt2.rs  lib.rs
src/: main.cpp  main.rs  main_final.cpp
src/attempts/: attempt.h  attemptClock.h  attemptManager.cpp  attemptManager.h  attemptResult.h  attempts.h
src/attempts/allAttempts/: attempt01.cpp  attempt01.h  attempt02.cpp  attempt02.h  attempt03.cpp  attempt03.h  attempt04.cpp  attempt04.h  attempt05.cpp  attempt05.h  attempt06.cpp  attempt06.h
